--- a/login.html
+++ b/login.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="main-container">
-
+        <form>
+            <label for="fname">First name:</label>
+            <input type="text" id="fname" name="fname"><br><br>
+            <label for="lname">Last name:</label>
+            <input type="text" id="lname" name="lname"><br><br>
+            <input type="submit" value="Submit">
+        </form>
     </div>
     <script src="javascript/login.js"></script>
 </body>
