--- a/public/index.html
+++ b/public/index.html
@@ -10,35 +10,30 @@
     <div class="LoginBox" >
         <img  src="images/Login_logo.png" class="avatar">
         <h1> LOGIN HERE </h1>
-        <form >
+        <form id="login-form">
             <p>Username</p>
-            <input type="text" name="" placeholder="Enter Username">
+            <input id="username" type="text" name="" placeholder="Enter Username">
             <p>Password</p>
-            <input type="password" name="" placeholder="Enter Password">
-            <input type="submit" value="Login">
+            <input id="password" type="password" name="" placeholder="Enter Password">
+            <input id="login-form-submit" type="submit" value="Login">
             <a href="#">* Forgot Password ?</a><br>
         </form>
      </div>
-    <script src="javascript/login.js"></script>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/7.19.1/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-        https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="/__/firebase/7.19.1/firebase-analytics.js"></script>
-    <script src="/__/firebase/7.19.1/firebase-auth.js"></script>
-    <script src="/__/firebase/7.19.1/firebase-firestore.js"></script>
-    
-    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
-    <script src="/__/firebase/7.19.1/firebase-analytics.js"></script>
-
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
-
+     <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
+     <!-- The core Firebase JS SDK is always required and must be listed first -->
+     <script src="/__/firebase/7.19.1/firebase-app.js"></script>
+ 
+     <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+     <script src="/__/firebase/7.19.1/firebase-analytics.js"></script>
+     <script src="/__/firebase/7.19.1/firebase-auth.js"></script>
+     <script src="/__/firebase/7.19.1/firebase-firestore.js"></script>
+     
+     <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+     <script src="/__/firebase/7.19.1/firebase-analytics.js"></script>
+ 
+     <!-- Initialize Firebase -->
+     <script src="/__/firebase/init.js"></script>
+     <script src="javascript/login.js"></script>
 </body>
 </html>
-
-
-
-
-
